# social-assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  drafts.py  (+4 more)
backend/app/connectors/: __init__.py  base.py  types.py
backend/app/core/: config.py  database.py
backend/app/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini.py
backend/app/models/: __init__.py  base.py  draft.py  enums.py  message.py  platform_connection.py  sync_job.py  thread.py  thread_analysis.py  user.py  user_profile.py
backend/app/schemas/: connection.py  draft.py  profile.py  thread.py
backend/app/services/: encryption.py  google_oauth.py  jwt_service.py  token_service.py
backend/app/workers/: arq_settings.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth_routes.py  test_config.py  test_connections_api.py  test_connector_types.py  test_database.py  test_draft_formatter.py  test_draft_service.py  test_draft_worker.py  test_drafts_api.py  test_encryption.py  test_gmail_connector.py  test_google_oauth.py  test_health.py  test_ingestion_persistence.py  test_ingestion_worker.py  test_jwt_service.py  test_llm_clients.py  test_mime_parser.py  test_models.py  test_profile_builder.py  test_profile_jobs_api.py  test_profile_sampler.py  test_profile_worker.py  test_rate_limiter.py  test_threads_api.py  test_token_service.py  test_triage_formatter.py  test_triage_service.py  test_triage_worker.py
(+57 files in other folders)
